[project]
name = "hrtfdata"
authors = [{name = "Johan Pauwels", email = "johan.pauwels@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"
dependencies = [
    "numpy >=1.22,<2",
    "scipy >=1.7,<2",
    "matplotlib >=3.5,<4",
    "Pillow >=9,<10",
    "netCDF4 >=1.5,<2",
    "torch >=1.10,<2",
    "torchvision >=0.11,<1",
]

[project.urls]
Home = "https://github.com/jpauwels/hrtfdata"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [".gitignore", "docs/", "tests/"]
