[project]
name = "hartufo"
authors = [{name = "Johan Pauwels", email = "johan.pauwels@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "matplotlib >=3.8.4",
    "netCDF4 >=1.7.0",
    "numpy >=1.22",
    "openpyxl >=3.1",
    "Pillow >=9",
    "pymatreader >=0.0.32",
    "scipy >=1.13.0",
    "sox >=0.4",
    "torchvision >=0.19.1",
    "tqdm",
]

[project.urls]
Home = "https://github.com/jpauwels/hartufo"
Changelog = "https://github.com/jpauwels/hartufo/releases"
Issues = "https://github.com/jpauwels/hartufo/issues"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [".gitignore", ".github/", "docs/", "tests/"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
line-length = 150

exclude = [
    ".git",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
